Salvando minhas últimas alterações antes de puxar do remoto